Avro schema added