@@ -1,7 +1,6 @@
 package com.disney.app.reservationservice.config;
 
-import lombok.extern.slf4j.Slf4j;
-import org.slf4j.MDC;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
@@ -11,7 +10,6 @@ import reactor.core.publisher.Mono;
 
 import java.util.UUID;
 
-@Slf4j
 @Component
 public class RequestLoggingFilter implements WebFilter {
 
@@ -21,44 +19,14 @@ public class RequestLoggingFilter implements WebFilter {
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
         String correlationId = correlationId(exchange.getRequest());
-        long startNanos = System.nanoTime();
-
         exchange.getResponse().getHeaders().set(CORRELATION_ID_HEADER, correlationId);
 
         return chain.filter(exchange)
-                .doOnSubscribe(subscription -> withCorrelationId(correlationId, () ->
-                        log.info("Request started: {} {}",
-                                exchange.getRequest().getMethod(),
-                                exchange.getRequest().getPath().value())))
-                .doOnSuccess(ignored -> withCorrelationId(correlationId, () ->
-                        log.info("Request completed: {} {} returned {} in {} ms",
-                                exchange.getRequest().getMethod(),
-                                exchange.getRequest().getPath().value(),
-                                exchange.getResponse().getStatusCode(),
-                                elapsedMillis(startNanos))))
-                .doOnError(error -> withCorrelationId(correlationId, () ->
-                        log.warn("Request failed: {} {} failed after {} ms with {}",
-                                exchange.getRequest().getMethod(),
-                                exchange.getRequest().getPath().value(),
-                                elapsedMillis(startNanos),
-                                error.getClass().getSimpleName())))
                 .contextWrite(context -> context.put(CORRELATION_ID_CONTEXT_KEY, correlationId));
     }
 
     private String correlationId(ServerHttpRequest request) {
         String correlationId = request.getHeaders().getFirst(CORRELATION_ID_HEADER);
-        return correlationId == null || correlationId.isBlank()
-                ? UUID.randomUUID().toString()
-                : correlationId;
-    }
-
-    private long elapsedMillis(long startNanos) {
-        return (System.nanoTime() - startNanos) / 1_000_000;
-    }
-
-    private void withCorrelationId(String correlationId, Runnable logStatement) {
-        try (MDC.MDCCloseable ignored = MDC.putCloseable(CORRELATION_ID_CONTEXT_KEY, correlationId)) {
-            logStatement.run();
-        }
+        return StringUtils.isBlank(correlationId) ? UUID.randomUUID().toString() : correlationId;
     }
 }
